--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
           </a>
         </div>
       </div>
-
-
+      <section id="courses">
+        <div class="row">
+        </div>
+      <section>
 
 
 
