--- a/course.html
+++ b/course.html
@@ -35,7 +35,7 @@
 
     <div class="container-fluid">
 
-      <nav class="navbar navbar-default navbar-fixed-top">
+      <nav class="navbar navbar-default navbar-fixed-top" id="ourNav">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -48,8 +48,8 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#courses">courses</a></li>
+              <li class="ourActive"><a href="#">Home</a></li>
+              <li><a href="#courses">Our courses</a></li>
               <li><a href="#mentors">mentors</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -67,12 +67,11 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a href="../navbar/">Default</a></li>
               <li><a href="../navbar-static-top/">Static top</a></li>
-              <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+              <li class="ourActive"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </nav>
-
       <div class="container-fluid full">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
@@ -119,6 +118,7 @@
                     </a>
                     <h3>دورة في اللغة</h3>
                     <p>we prepared an effective course to you to develop your language with our teachers </p>
+                     <a href="#" type="button" class="btn btn-default">Take me to course page</a>
                   </div>
                 <div class="col-xs-6 col-md-3 centered">
                     <a href="#">
